monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0804.java
/* (c) https://github.com/MontiCore/monticore */
abstract void method();
