monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0820/A0820.java
/* (c) https://github.com/MontiCore/monticore */
public final  constructor(){}
